test/files/neg/qualifying-class-error-1.scala
class A(val i:Int)
class B extends A(this.getClass.getName.length)
