test/files/neg/qualifying-class-error-1.check
qualifying-class-error-1.scala:2: error: this can be used only in a class, object, or template
class B extends A(this.getClass.getName.length)
                  ^
one error found
